@@ -185,6 +185,7 @@ public class JavaScript {
         private void handleScriptException( Exception e, String badScript ) {
             final String errorMessage = badScript + " failed: " + e;
             if (!(e instanceof EcmaError) && !(e instanceof EvaluatorException)) {
+                e.printStackTrace();
                 throw new RuntimeException( errorMessage );
             } else if (isThrowExceptionsOnError()) {
                 e.printStackTrace();
