@@ -14,6 +14,9 @@ Limitations:
 
 Revision History:
  1-Apr-2003
+Additions:
+    1. Added format parameter for JUnitServlet: values are "text" or "html"
+
 Problems fixed:
     1. HttpUnit now handles refresh headers without explicit URLs, defaulting to refreshing the containing page.
     2. Bug #709979: Select.selectedIndex was returning -1 for a normal select box with no options explicitly selected.
